infra/k8s/auth-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-redis
  template:
    metadata:
      labels:
        app: auth-redis
    spec:
      containers:
      - name: auth-redis
        image: redis
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: auth-redis-service
spec:
  selector:
    app: auth-redis
  ports:
  - name: redis-cluster
    protocol: TCP
    port: 6379
    targetPort: 6379
