infra/k8s/front-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-depl
spec:
  selector:
    matchLabels:
      app: front-service
  template:
    metadata:
      labels:
        app: front-service
    spec:
      containers:
      - name: front-service
        image: abdellatiftijani/front-service
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front-service
  ports:
  - name: front-service
    protocol: TCP
    port: 3000
    targetPort: 3000
