infra/k8s/mongo-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-depl
spec:
  replicas: 1
  serviceName: mongo-service
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
      - name: auth-mongo
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: auth-mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: auth-mongo-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 500Mi
# ClusterIp Service
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-service
spec:
  selector:
    app: auth-mongo
  type: ClusterIP
  ports:
  - name: auth-mongo-db
    protocol: TCP
    port: 27017
    targetPort: 27017
