infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: tickets.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/users/?(.*)
        backend:
          service:
            name: auth-service
            port:
              number: 3005
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: front-service
            port:
              number: 3000
